--- a/src/app/pages/home/featured-projects/featured-projects.component.html
+++ b/src/app/pages/home/featured-projects/featured-projects.component.html
@@ -1,1 +1,11 @@
-<p>featured-projects works!</p>
+<section class="featured-projects">
+    <h2>Featured Projects</h2>
+    <div class="projects-grid">
+      <div class="project-card" *ngFor="let project of projects">
+        <img [src]="project.img" alt="{{ project.title }}" />
+        <h3>{{ project.title }}</h3>
+        <p>{{ project.description }}</p>
+      </div>
+    </div>
+  </section>
+  
