added landing page starfield effect

--- a/src/app/pages/home/hero/hero.component.html
+++ b/src/app/pages/home/hero/hero.component.html
@@ -1,5 +1,5 @@
 <section class="hero-section">
-    <h1 class="hero-title">Hi, I'm [Your Name]</h1>
+    <h1 class="hero-title">Hi, I'm Muskan</h1>
     <p class="hero-subtitle">I create modern, animated web experiences.</p>
   </section>
   
