--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,5 +1,17 @@
 <div class="main">
+  <div class="gradient gradient1"></div>
+  <div class="gradient gradient2"></div>
+  <div class="gradient gradient3"></div>
+  <div class="gradient gradient4"></div>
   <div #scene class="scene">
     <div class="star" *ngFor="let star of stars"></div>
+  </div>
+  <div class="baseContainer">
+    <button class="base" data-depth="0.00">
+      <!--Top right heading inside base div-->
+      <div class="enter" data-depth="1.00" (click)="navigateToHome()">
+        WELCOME
+      </div>
+    </button>
   </div>
 </div>
