--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-
-<router-outlet></router-outlet>
+<div class="main">
+  <!-- <app-space></app-space> -->
+  <app-cyber-city></app-cyber-city>
+  <router-outlet></router-outlet>
+</div>
