--- a/src/app/pages/home/hero/hero.component.html
+++ b/src/app/pages/home/hero/hero.component.html
@@ -1,15 +1,11 @@
 <section class="hero-section">
-  <div #scene class="scene">
-    <div class="star" *ngFor="let star of stars"></div>
+  <div #heading class="hero-title">
+    <h1>Hi, I'm</h1>
   </div>
-  <h1 class="text-7xl font-bold text-white sm:truncate">Hi, I'm Muskan</h1>
-  <div
-    #container
-    class="scroll-reveal-container"
-  >
-    <p class="flex flex-wrap gap-3 text-center max-w-4xl justify-center">
+  <div #container class="hero-subtitle">
+    <p>
       <ng-container *ngFor="let word of words">
-        <span class="sui-text-reveal opacity-0 inline-block translate-y-5">
+        <span class="text-reveal">
           {{ word }}
         </span>
       </ng-container>
