--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="main">
   <!-- <app-space></app-space> -->
-  <app-cyber-city></app-cyber-city>
+  <app-cosmos></app-cosmos>
   <router-outlet></router-outlet>
 </div>
