--- a/src/app/pages/landing/landing.component.css
+++ b/src/app/pages/landing/landing.component.css
@@ -129,11 +129,10 @@
   font-size: 35px;
   color: rgb(235, 245, 191);
   text-shadow: 0px 50px 5px rgba(235, 245, 191, 0.3);
-
-  font-family: "Michroma", sans-serif;
-  font-optical-sizing: auto;
+  font-family: "Alumni Sans SC", sans-serif;
   font-weight: 400;
   font-style: normal;
+
   cursor: pointer;
 }
 
