--- a/src/app/pages/home/hero/hero.component.html
+++ b/src/app/pages/home/hero/hero.component.html
@@ -1,17 +1,4 @@
-<section class="hero-section">
-  <div #heading class="hero-title">
-    <h1>Hi, I'm</h1>
-  </div>
-  <div #container class="hero-subtitle">
-    <p>
-      <ng-container *ngFor="let word of words">
-        <span class="text-reveal">
-          {{ word }}
-        </span>
-      </ng-container>
-    </p>
-  </div>
-</section>
+<section class="hero-section"></section>
 <!--When I’m not coding, you might
     find me immersed in a canvas, painting stories in color — a creative outlet
     that keeps my mind balanced and inspired. I'm always up for solving complex
