--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,40 @@
-<app-hero></app-hero>
-<app-featured-projects></app-featured-projects>
+<div #starcontainer class="cosmos-gradient-wrapper">
+  <div class="hero">Hi, I'm Muskan</div>
+  <div class="star" *ngFor="let star of stars"></div>
+  <div class="cosmos-container" #container></div>
+  <div *ngFor="let label of planetLabels">
+    <!-- floating label -->
+    <div
+      class="planet-label"
+      [attr.id]="'label-' + label.name"
+      [style.left.px]="label.screenX + 40"
+      [style.top.px]="label.screenY - 40"
+      [style.transform]="'translate(-50%, -50%) scale(' + label.scale + ')'"
+      (click)="onPlanetClick(label.name)"
+    >
+      {{ label.name | uppercase }}
+    </div>
+    <div class="contact">
+      <div class="social-links">
+        <span
+          ><a
+            href="https://www.linkedin.com/in/muskan-kumari-7a8937227"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i></a
+        ></span>
+        <span
+          ><a href="https://github.com/Miko-29" target="_blank"
+            ><i class="fa-brands fa-github"></i></a
+        ></span>
+        <span
+          ><a href="https://instagram.com/_miko_29" target="_blank"
+            ><i class="fa-brands fa-instagram"></i></a
+        ></span>
+        <!-- <span
+          ><a href="https://github.com/wlleroux84" target="_blank"
+            ><i class="fa-solid fa-paper-plane"></i></a
+        ></span> -->
+      </div>
+    </div>
+  </div>
+</div>
