--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
 <router-outlet></router-outlet>
+<canvas
+  id="comet-trail-canvas"
+  style="
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    pointer-events: none;
+    z-index: 9998;
+  "
+></canvas>
+<div id="comet-cursor"></div>
