--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -24,8 +24,8 @@
 }
 
 .star {
-  width: 1px;
-  height: 1px;
+  width: 2px;
+  height: 2px;
   background: white;
   box-shadow: 0 0 4px #cfffe2, 0 0 10px #cfffe2;
   filter: blur(0.5px);
@@ -39,11 +39,11 @@
   position: absolute;
   color: white;
   /* background: rgba(0, 0, 0, 0.7); */
-  /* border: 1px solid white; */
+  /* border: 2px solid white; */
   font-family: "Alumni Sans SC", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 12px;
+  font-size: 42px;
   padding: 6px 12px;
   border-radius: 4px;
   pointer-events: auto;
@@ -57,13 +57,13 @@
   content: "";
   position: absolute;
   background-color: #ffffff50;
-  width: 11px;
+  width: 12px;
   height: 3px;
-  left: -1px;
+  left: -2px;
   bottom: 3px;
-  height: 1px;
+  height: 2px;
   /* width: 100%; */
-  border-top: 1px solid rgba(var(--white));
+  border-top: 2px solid rgba(var(--white));
   transform: rotate(320deg);
 }
 .planet-label::before {
@@ -74,21 +74,21 @@
   height: 3px;
   left: 8px;
   bottom: 6px;
-  height: 1px;
+  height: 2px;
   width: 85%;
-  border-bottom: 1px solid rgba(var(--white));
+  border-bottom: 2px solid rgba(var(--white));
 }
 
 .hero {
   color: #fff;
   padding: 10px 20px;
   font-family: "Special Gothic Expanded One", sans-serif;
-  font-size: 24px;
+  font-size: 70px;
   margin: 2px auto;
   /* text-align: center; */
   text-shadow: 0 0 30px rgb(0, 0, 0) !important;
-  letter-spacing: 1px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  letter-spacing: 2px;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
 .contact {
   position: absolute;
@@ -96,8 +96,10 @@
   left: 50%;
   transform: translateX(-50%);
   padding: 8px 12px;
-  font-size: 14px;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  font-size: 40px;
+  border-top: 2px solid rgba(255, 255, 255, 0.1);
+  text-shadow: 0 0 30px rgb(0, 0, 0) !important;
+
   text-align: center;
   width: 100%;
   font-family: "Special Gothic Expanded One", sans-serif;
