--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -1,5 +1,8 @@
 <app-cosmos></app-cosmos>
 <div class="experience-content" #pageContent>
+  <div class="home-icon" (click)="navigateHome()">
+    <i class="fa-brands fa-space-awesome"></i>&nbsp;&nbsp;HOME
+  </div>
   <div class="experience-card">
     <div class="exp-header">
       <img src="assets/bg.png" alt="GTROPY logo" class="exp-logo" />
