--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,5 +1,8 @@
 <app-cosmos></app-cosmos>
 <div class="projects-content" #pageContent>
+  <div class="home-icon" (click)="navigateHome()">
+    <i class="fa-brands fa-space-awesome"></i>&nbsp;&nbsp;HOME
+  </div>
   <h1 class="projects-title">Projects</h1>
   <div class="projects-grid">
     <!-- Example Project Card 1 -->
