--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,5 +1,8 @@
 <app-cosmos></app-cosmos>
 <div class="skills-content" #pageContent>
+  <div class="home-icon" (click)="navigateHome()">
+    <i class="fa-brands fa-space-awesome"></i>&nbsp;&nbsp;HOME
+  </div>
   <h1 class="skills-title">Skills</h1>
   <div class="skills-category">
     <h2>Frontend</h2>
