--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -111,17 +111,20 @@ app-cosmos {
   position: fixed;
   top: 24px;
   right: 32px;
-  font-size: 2.5rem;
+  /* font-size: 2.5rem; */
   color: #fff;
   background: rgba(0, 0, 0, 0.3);
-  border-radius: 50%;
-  padding: 10px 14px;
+  border-radius: 10%;
+  border: 2px solid #fff;
+  padding: 10px 10px;
   cursor: pointer;
   z-index: 1000;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 8px rgb(255 255 255 / 20%);
   transition: background 0.2s, transform 0.2s;
+  font-family: "Alumni Sans SC", sans-serif;
+  font-size: 20px;
 }
 .home-icon:hover {
-  background: rgba(0, 0, 0, 0.6);
+  /* background: rgba(0, 0, 0, 0.6); */
   transform: scale(1.08);
 }
